# OllamaMon

./: .codecannon.yaml  .gitignore  AGENTS.md  Makefile  PLANNING.md  PUBLISHING.md  README.md  REFERENCE.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  homebrew.yml  publish.yml
assets/: README.md
homebrew-omon/: README.md
homebrew-omon/Formula/: omon.rb
scripts/: homebrew-tap-clone.sh  update-homebrew-formula.sh
src/omon/: __main__.py  api.py  bench.py  cli.py  completions.py  config.py  decoder.py  formatter.py  hardware.py  models.py  pressure.py  store.py  suggest.py
src/omon/data/: model_map.json  tag_dictionary.json
src/omon/tui/: watch.py
src/omon/web/: server.py
src/omon/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_api.py  test_decoder.py  test_formatter.py  test_suggest.py
